Iframe Sizing and Canvas Sizing Setting

--- a/DynamicBoard.UnitTest/appsettings.json
+++ b/DynamicBoard.UnitTest/appsettings.json
@@ -7,7 +7,7 @@
   },
   "DynamicBoardSection": {
     "EncryptedKey": "QmUhfOq7Y8",
-    "DynamicBoardApplicationRootAddress": "https://dynamicboard.sme.gov.om"
+    "DynamicBoardApplicationRootAddress": "https://localhost:7059"
     //"https://dynamicboard.sme.gov.om" //"http://10.38.38.166:226" //"https://localhost:7059"//    "http://10.38.7.89:5000"
   },
   "AllowedHosts": "*"
