DashboardChartsRenderer-DynamicBoard-31-Jul-2024

--- a/DynamicBoard.Application/DynamicBoard.Application.csproj
+++ b/DynamicBoard.Application/DynamicBoard.Application.csproj
@@ -24,6 +24,10 @@
     <Content Update="Components\Pages\Dashboard\DashboardListView.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
+    <Content Update="Views\Chart\ChartTemplateView.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Update="wwwroot\app.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
