--- a/DynamicBoard.UnitTest/DynamicBoard.UnitTest.csproj
+++ b/DynamicBoard.UnitTest/DynamicBoard.UnitTest.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\DashboardIndex.razor" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SME.DynamicBoard.UI\SME.DynamicBoard.UI.csproj" />
