--- a/DynamicBoard.Application/appsettings.json
+++ b/DynamicBoard.Application/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "ConnectionStringsSection": {
-    "DefaultConnectionDev": "Server=10.38.38.165;Database=SMEReporting;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=SMedi@22222;Integrated Security=False;TrustServerCertificate=True;",
-    "DefaultConnectionProd": "Server=10.38.38.199;Database=DynamicBoard;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=SMedi@33333;Integrated Security=False;TrustServerCertificate=True;"
+    "DefaultConnectionDev": "Server=10.38.38.165;Database=DynamicBoard;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=SMedi@22222;Integrated Security=False;TrustServerCertificate=True;",
+    "DefaultConnectionProd": "Server=10.38.38.165;Database=DynamicBoard;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=SMedi@22222;Integrated Security=False;TrustServerCertificate=True;"
+    //"DefaultConnectionProd": "Server=10.38.38.199;Database=DynamicBoard;Trusted_Connection=True;MultipleActiveResultSets=true;User Id=sa;Password=SMedi@33333;Integrated Security=False;TrustServerCertificate=True;"
   },
 
   "EncryptedKeySection": {
