--- a/DynamicBoard.Application/DynamicBoard.Application.csproj
+++ b/DynamicBoard.Application/DynamicBoard.Application.csproj
@@ -14,8 +14,8 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
-	<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-* " />
-    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-* " />
+	<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.10.1" />
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.10.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
   </ItemGroup>
 
